syntax = "proto3";
package com.oxchains.grpc;
option java_outer_classname = "HelloOrdererServiceProto";
option java_multiple_files = true;

//服务端接口类
service Greeter {
  //服务端接口方法
  rpc SayHello (HelloRequest) returns (HelloReply) {}
}

//请求参数
message HelloRequest {
  string greeting = 1;
}

//响应参数
message HelloReply {
  string message = 1;
}
